Issue #31 Подрправлено в соответствии с письмом Вигена от Fri, 19 Aug 2011 "Поиск марки в калькуляторе" Issue #31 надпись "Мощность" изменена на "Объем двигателя"
Issue #31 Поменял местами табы КАСКО и ОСАГО, теперь КАСКО - первый таб.

Issue #31 В выборе модели  выключил скроллинг по стрелкам, теперь можно перемещаться по набору первой буквы.

--- a/insurance/apps/calc/templates/calc_step_1.html
+++ b/insurance/apps/calc/templates/calc_step_1.html
@@ -55,8 +55,8 @@ $(function() {
 
     <div class="calk_tabs">
       <ul class="calk_tabs_link">
-	<li><a class="" href="#tabs_1">ОСАГО</a></li>
-	<li><a class="" href="#tabs_2">КАСКО</a></li>
+	<li><a class="" href="#tabs_1">КАСКО</a></li>
+	<li><a class="" href="#tabs_2">ОСАГО</a></li>
 	<li><a class="" href="#tabs_3">ДМС</a></li>
 	<li><a class="" href="#tabs_4">ДАГО</a></li>
 	<li><a class="" href="#tabs_5">НС</a></li>
@@ -112,7 +112,7 @@ $(function() {
               </tr>
 
               <tr>
-                <td>Мощность: </td>
+                <td>Объем двигателя: </td>
                 <td>{{ calc_step_one_form.power }}</td>
               </tr>
 
