--- a/insurance/apps/calc/templates/calc_step_2.html
+++ b/insurance/apps/calc/templates/calc_step_2.html
@@ -49,8 +49,8 @@ $(function() {
 <div id="content">
   <div class="tabs_box">
       <ul class="tabs">
-        <li><a href="#tabs_cont_1" class="active">ОСАГО</a></li>
-        <li><a href="#tabs_cont_2">КАСКО</a></li>
+        <li><a href="#tabs_cont_1" class="active">КАСКО</a></li>
+        <li><a href="#tabs_cont_2">ОСАГО</a></li>
         <li><a href="#tabs_cont_3">ДМС</a></li>
         <li><a href="#tabs_cont_4">ДАГО</a></li>
         <li><a href="#tabs_cont_5">НС</a></li>
