Формы регистрации и логина во временной верстке.

--- a/insurance/templates/registration/login.html
+++ b/insurance/templates/registration/login.html
@@ -1,12 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<form action="" method="post">{% csrf_token %}
-  {{ form.as_p }}
-  <input type="submit" value="Submit" />
-</form>
 
-<li><a href="{% url registration_register %}">Зарегистрироваться</a></li>
+{% include "registration/forms/login_form.html" %}
 
-<li><a href="{% url auth_password_reset %}">Забыли пароль?</a></li>
 {% endblock %}
