--- a/insurance/local_settings.py.tmpl
+++ b/insurance/local_settings.py.tmpl
@@ -22,7 +22,7 @@ EMAIL_HOST_PASSWORD = 'username pass'
 EMAIL_PORT = 587
 EMAIL_USE_TLS = True
 
-# 1 for directif.ru, 2 for dev.directif.ru
+# 1 for Polisbook.com, 2 for dev.polisbook.com
 SITE_ID = 1
 
 
