Fixes #38 && in insurance/urls.py import settings -> from django.conf import settings

--- a/insurance/templates/registration/forms/login_form.html
+++ b/insurance/templates/registration/forms/login_form.html
@@ -6,7 +6,7 @@
 	  <th>*Адрес эл.почты:</th>
 	</tr>
 	<tr>
-	  <td><input type="text" class="style_input5" name="email">
+	  <td><input type="text" class="style_input5" name="username">
             {% if form.email.errors %}
 	    <p class="message_error">*Неправильный адрес эл.почты</p>
             {% endif %}
