--- a/insurance/local_settings.py.tmpl
+++ b/insurance/local_settings.py.tmpl
@@ -34,3 +34,5 @@ SERVLET_DB_USER = 'insdu'
 SERVLET_DB_PASS = 'insdpwd'
 
 SERVLET_URL = 'http://www.polisbook.ru:8080/ServerIF/MatrixIF'
+
+SERVLET_FAKE = True
