--- a/insurance/static/css/style.css
+++ b/insurance/static/css/style.css
@@ -139,7 +139,8 @@ a:hover        {text-decoration:none}
 					.table_user_form	{float:left;}
 						.table_user_form th	{ width:204px; padding:0 45px 3px 4px; text-align:left; font-size:10px; font-weight:normal;}
 						.table_user_form td	{ width:208px; padding:0 45px 10px 0; vertical-align:top; font-size:11px;}
-						.style_input5	{border:1px solid #501c06; background:#fff; color:#000; font-size:13px; font-family:Arial; width:197px;}
+						.style_input5 input	{border:1px solid #501c06; background:#fff; color:#000; font-size:13px; font-family:Arial; width:197px;}
+                        input.style_input5 	{border:1px solid #501c06; background:#fff; color:#000; font-size:13px; font-family:Arial; width:197px;}
 						.style_input6	{border:1px solid #501c06; background:#fff; color:#000; font-size:13px; font-family:Arial; width:65px; margin-right:10px;}
 						.style_input7	{border:1px solid #501c06; background:#fff; color:#000; font-size:13px; font-family:Arial; width:120px;}
 						.style_select	{border:1px solid #501c06; background:#fff; width:153px;}
@@ -150,7 +151,7 @@ a:hover        {text-decoration:none}
 					.box_textarea	{float:right;}
 						.box_textarea textarea	{width:355px; border:1px solid #501c06; height:203px; background:#fff; color:#000; font-size:13px; font-family:Arial; resize:none;}
 						.box_textarea_header	{font-size:10px; padding:0 0 3px 4px;} 
-						.box_button_seva	{float:right; padding:12px 42px 0 0;}
+						.box_button_seva	{padding:12px 42px 0 0;}
 					.cont_text	{font-size:16px;}
 						.cont_text p	{padding:0 0 20px 0;}
 						
@@ -448,4 +449,9 @@ a:hover        {text-decoration:none}
 				
 #exposeMask	{left:0; top:0;}
 		
-				
+
+div.messages li {
+    list-style:none;
+    font-size:12px;
+    color:#c81800;
+    }
