Название параметра для руля везде изменено с weel на wheel

--- a/insurance/apps/calc/templates/calc_step_1.html
+++ b/insurance/apps/calc/templates/calc_step_1.html
@@ -108,7 +108,7 @@ $(function() {
 
               <tr>
                 <td>Руль: </td>
-                <td>{{ calc_step_one_form.weel }}</td>
+                <td>{{ calc_step_one_form.wheel }}</td>
               </tr>
 
               <tr>
