--- a/insurance/templates/registration/forms/registration_form.html
+++ b/insurance/templates/registration/forms/registration_form.html
@@ -1,47 +1,79 @@
-<div class="pop_up_cont"><div class="pop_up_cont_in">
-    <form action="{% url registration_register %}" method="post">{% csrf_token %}
-      <table cellspacing="0" cellpadding="0" class="table_user_form">
-	<tr>
-	  <th>*Адрес эл.почты:</th>
-	</tr>
-	<tr>
-	  <td>
-            <input type="text" class="style_input5" name="email">
-            {% if form.email.errors %}
-            <p class="comment_error">*Ошибка заполнения поля</p>
-            {% endif%}
-          </td>
-	</tr>
-	<tr>
-	  <th>*Пароль:</th>
-	</tr>
-	<tr>
-	  <td><input type="password" class="style_input5" name="password1">
-            {% if form.password1.errors %}
-            <p class="comment_error">*Ошибка заполнения поля</p>
-            {% endif%}
-          </td>
-	</tr>
-	<tr>
-	  <th>*Повторите пароль:</th>
-	</tr>
-	<tr>
-	  <td><input type="password" class="style_input5" name="password2">
-            {% if form.password2.errors %}
-            <p class="comment_error">*Ошибка заполнения поля</p>
-            {% endif%}
-          </td>
-	</tr>
-      </table>
-      <div class="register_checbox">
-	<p>Я согласен с правилами регистрации <input type="checkbox" class="style_checkbox" name="tos" /></p>
-        {% if form.tos.errors %}
-        <p class="comment_error">*Ошибка заполнения поля</p>
-        {% endif%}
-      </div>
-      <div class="pop_up_button">
-	<input name="" type="submit" value="Зарегистрироваться" />
-      </div>
-    </form>
-  </div>
+<div class="pop_up_cont">
+    <div class="pop_up_cont_in">
+        <form action="{% url registration_register %}" method="post">
+            {% csrf_token %}
+            <table cellspacing="0" cellpadding="0" class="table_user_form">
+                <tr>
+                    <th>Фамилия:</th>
+                    <th>*Адрес эл.почты:</th>
+                </tr>
+                <tr>
+                    <td>
+                        {{ form.last_name }}
+                        {{ form.last_name.errors }}
+                    </td>
+                    <td>
+                        {{ form.email }}
+                        {{ form.email.errors }}
+                    </td>
+                </tr>
+                <tr>
+                    <th>Имя:</th>
+                    <th>*Пароль:</th>
+                </tr>
+                <tr>
+                    <td>
+                        {{ form.first_name }}
+                        {{ form.first_name.errors }}
+                    </td>
+                    <td>
+                        {{ form.password1 }}
+                        {{ form.password1.errors }}
+                    </td>
+                </tr>
+                <tr>
+                    <th>Отчество:</th>
+                    <th>*Повторите пароль:</th>
+                </tr>
+                <tr>
+                    <td>
+                        {{ form.middle_name }}
+                        {{ form.middle_name.errors }}
+                    </td>
+                    <td>
+                        {{ form.password2 }}
+                        {{ form.password2.errors }}
+                    </td>
+                </tr>
+                <tr>
+                    <th>Телефон:</th>
+                    <th>*Введите текст с картинки:</th>
+                </tr>
+                <tr>
+                    <td>
+                        {{ form.phone }}
+                        {{ form.phone.errors }}
+                    </td>
+                    <td>
+                        {{ form.captcha }}
+                        {{ form.captcha.errors }}
+                    </td>
+                </tr>
+            </table>
+            <div class="register_checbox">
+                <p>Я согласен с правилами регистрации {{ form.tos }}</p>
+                {{ form.tos.errors }}
+            </div>
+            <div class="pop_up_button">
+                <input name="" type="submit" value="Зарегистрироваться"/>
+            </div>
+            {% if form.non_field_errors %}
+                <br/><br/><br/>
+                <div>
+                    <h2>Ошибки заполнения формы:</h2>
+                    {{ form.non_field_errors }}
+                </div>
+            {% endif %}
+        </form>
+    </div>
 </div>
