--- a/insurance/templates/includes/header.html
+++ b/insurance/templates/includes/header.html
@@ -21,6 +21,7 @@
       </div>
       <div class="setup_user" style="display:none">
         <a href="{% url auth_logout %}">Выход</a>
+        <a href="#" rel="#pop_up_4">Вопрос</a>
       </div>
       {% else %}
       <div class="head_ico_text">
@@ -30,7 +31,7 @@
         <a href="#" rel="#pop_up_1">Регистрация</a>
         <a href="#" rel="#pop_up_2">Вход</a>
         <!-- <a href="#" rel="#pop_up_3">Пароль</a> -->
-        <!-- <a href="#" rel="#pop_up_4">Вопрос</a> -->
+        <a href="#" rel="#pop_up_4">Вопрос</a>
       </div>
       {% endif %}
       <script>
