--- a/insurance/apps/ins_notification/templates/notification/question.html
+++ b/insurance/apps/ins_notification/templates/notification/question.html
@@ -1,32 +1,7 @@
-{% extends "profile/userprofile_base.html" %}
+{% extends "base.html" %}
 
-{% block inner_content %}
-<div id="ins_notification_question">
-  <h3>Задать вопрос</h3>
+{% block content %}
 
+{% include "notification/forms/question_form.html" %}
 
-<div  id="notification_question_form">
-{% if sent %}
-
-<p>Ваш вопрос успешно отослан</p>
-
-<p><a href="{% url ins_notification_inbox %}">Назад</a></p>
-
-{% else %}
-
-<form action="" method="post">{% csrf_token %}
-<table width="" cellspacing="" cellpadding="" border="">
-  {{ quest_form.as_table }}
-
-  <tr>
-    <td></td>
-    <td><input type="submit" value="Отправить" /></td>
-  </tr>
-</table>
-</form>
-
-</div>
-{% endif %}
-
-</div>
 {% endblock %}
