--- a/insurance/apps/profile/templates/profile/userprofile_addpersona.html
+++ b/insurance/apps/profile/templates/profile/userprofile_addpersona.html
@@ -28,7 +28,7 @@
             </ul>
             <!---- Первая закладка внутри ----->
             <div id="tabs_cont3_1" class="bg_tabs3_box">
-              {% include "profile/forms/persona_form.html" with form=persona_form %}
+              {% include "profile/forms/persona_form.html" with profile_form=persona_form %}
               {% if persona_id %}
               <div class="box_button_seva">
                 <p><a href="{% url userprofile_deletepersona persona_id %}" class="style_button" >Удалить</a></p>
