--- a/insurance/templates/includes/header.html
+++ b/insurance/templates/includes/header.html
@@ -30,7 +30,7 @@
       <div class="setup_user" style="display:none">
         <a href="#" rel="#pop_up_1">Регистрация</a>
         <a href="#" rel="#pop_up_2">Вход</a>
-        <!-- <a href="#" rel="#pop_up_3">Пароль</a> -->
+        <a href="#" rel="#pop_up_3">Пароль</a>
         <a href="#" rel="#pop_up_4">Вопрос</a>
       </div>
       {% endif %}
