--- a/insurance/templates/registration/password_reset_form.html
+++ b/insurance/templates/registration/password_reset_form.html
@@ -1,14 +1,7 @@
 {% extends "base.html" %}
+
 {% block content %}
 
-<h1>Сбросить пароль</h1>
-
-<p>Забыли пароль? Введите ниже адрес вашей электронной почты, и мы вышлем
-  инструкции по установке нового.</p>
-
-<form action="" method="post">{% csrf_token %}
-{{ form.email.errors }}
-<p><label for="id_email">Адрес электронной почты:</label> {{ form.email }} <input type="submit" value="Сбросить пароль" /></p>
-</form>
+{% include "pop_up_3.html" %}
 
 {% endblock %}
