--- a/insurance/templates/includes/popup_pass_recover.html
+++ b/insurance/templates/includes/popup_pass_recover.html
@@ -1,28 +1,9 @@
 <div class="pop_up pop_up_password_recovery" id="pop_up_3">
-  <div class="pop_up_header">
-    <div class="close"></div>
-    Восстановление пароля
-  </div>
-  <div class="pop_up_cont"><div class="pop_up_cont_in">
-      <div class="pop_up_header2">
-	Что же  делать, если вы забыли пароль?
-      </div>
-      <p>В форму ниже введите свой электронный адрес, указанный при регестрации.
-        Через несколько минут на ваш Адрес эл,почты придет письмо с паролем,</p>
-      <div class="form_email">
-	<p>*Адрес эл.почты:</p>
-	<div class="form_email_input">
-	  <form action="" method="get">
-	    <input name="" type="text" class="form_email_input_text" />
-	    <input name="" type="text" class="form_email_input_button" value="Отправить" />
-	  </form>
-	</div>
-	<p class="color_red">*Пользователь не найден</p>
-	<p class="color_red">*Не верный адрес эл.почты</p>
-      </div>
-      <div class="pop_up_contacs">
-	Если при восстонавлении пароля у вас возникли сложности, свяжитесь с нами:<br />
-        +7 (495) 345 43 N\A , skype: polisbook.support.
-      </div>
-  </div></div>
+    <div class="pop_up_header">
+        <div class="close"></div>
+        Восстановление пароля
+    </div>
+    {% with reset_pass_form as form %}
+        {% include "pop_up_3.html" %}
+    {% endwith %}
 </div>
