--- a/insurance/templates/includes/popup_pass_recover.html
+++ b/insurance/templates/includes/popup_pass_recover.html
@@ -4,6 +4,6 @@
         Восстановление пароля
     </div>
     {% with reset_pass_form as form %}
-        {% include "pop_up_3.html" %}
+        {% include "registration/password_reset_form_content.html" %}
     {% endwith %}
 </div>
