--- a/insurance/templates/registration/password_reset_form.html
+++ b/insurance/templates/registration/password_reset_form.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 
-{% include "pop_up_3.html" %}
+{% include "registration/password_reset_form_content.html" %}
 
 {% endblock %}
