--- a/insurance/templates/registration/password_reset_form_content.html
+++ b/insurance/templates/registration/password_reset_form_content.html
@@ -1,5 +1,6 @@
 <div class="pop_up_cont">
     <div class="pop_up_cont_in">
+		<div class="center_pass">
         <div class="pop_up_header2">
             Что же делать, если вы забыли пароль?
         </div>
@@ -22,5 +23,5 @@
             Если при восстановлении пароля у вас возникли сложности, свяжитесь с нами:<br/>
             +7 (495) 345 43 N\A , skype: polisbook.support.
         </div>
-    </div>
+    </div></div>
 </div>
