--- a/insurance/apps/ins_notification/templates/notification/forms/question_form.html
+++ b/insurance/apps/ins_notification/templates/notification/forms/question_form.html
@@ -1,6 +1,7 @@
 <div class="pop_up_cont">
   <div class="pop_up_cont"><div class="pop_up_cont_in">
-      <div class="pop_up_questions_l">
+	  <div class="center_quest">
+		  <div class="pop_up_questions_l">
     <form action="{% url ins_notification_question %}" method="POST">{% csrf_token %}
       <div class="pop_up_header2">
       {{ form.non_field_errors }}
@@ -45,6 +46,7 @@
       <li><a href="#">Что делать при утере полиса</a></li>
     </ul>
       </div>
+  </div>
   </div>
   </div>
 </div>
