--- a/insurance/static/css/style.css
+++ b/insurance/static/css/style.css
@@ -411,6 +411,10 @@ a:hover        {text-decoration:none}
 			.close	{width:25px; height:25px; cursor:pointer; background:url(/static/images/close.gif) 0 0 no-repeat; top:10px; right:16px; position:absolute;}
 		.pop_up_cont	{background:#ae948e url(/static/images/pop_up_cont.jpg) 0 0 repeat-x; padding:10px;}
 			.pop_up_cont_in	{background:#cebfbb url(/static/images/pop_up_cont_in.jpg) 0 0 repeat-x; padding:28px 20px 30px 50px; -moz-border-radius:4px; -webkit-border-radius: 4px; -khtml-border-radius: 4px; border-radius:4px; border:2px solid #9f606b; overflow:hidden;}
+				.center_reg {width:506px;margin:0 auto;}
+				.center_login {width:212px;margin:0 auto;}
+				.center_quest {width:790px;margin:0 auto;}
+				.center_pass {width:515px;margin:0 auto;}
 			.register_checbox	{float:left;font-size:10px;}
 				.style_checkbox {border:1px solid #9a7c71; background:#b8a39b; position:relative; top:0; height:7px; float:left;}
 				.comment_error	{color:#81323e; font-size:9px; padding:5px 0 0 15px;}
