--- a/insurance/templates/registration/forms/registration_form.html
+++ b/insurance/templates/registration/forms/registration_form.html
@@ -1,5 +1,6 @@
 <div class="pop_up_cont">
     <div class="pop_up_cont_in">
+		<div class="center_reg">
         <form action="{% url registration_register %}" method="post">
             {% csrf_token %}
             <table cellspacing="0" cellpadding="0" class="table_user_form">
@@ -77,5 +78,6 @@
                 </div>
             {% endif %}
         </form>
+    </div>
     </div>
 </div>
