--- a/insurance/templates/registration/login.html
+++ b/insurance/templates/registration/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-
+<div class="content">
 {% include "registration/forms/login_form_full.html" %}
-
+</div>
 {% endblock %}
