--- a/insurance/templates/registration/password_reset_form.html
+++ b/insurance/templates/registration/password_reset_form.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-
-{% include "registration/password_reset_form_content.html" %}
-
+<div class="content">
+	{% include "registration/password_reset_form_content.html" %}
+</div>
 {% endblock %}
