--- a/insurance/templates/registration/registration_form.html
+++ b/insurance/templates/registration/registration_form.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-
+<div class="content">
 {% include "registration/forms/registration_form.html" %}
-
+</div>
 {% endblock %}
