--- a/insurance/apps/ins_notification/templates/notification/question.html
+++ b/insurance/apps/ins_notification/templates/notification/question.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-
+<div class="content">
 {% include "notification/forms/question_form.html" %}
-
+</div>
 {% endblock %}
