--- a/insurance/static/css/style.css
+++ b/insurance/static/css/style.css
@@ -406,7 +406,10 @@ a:hover        {text-decoration:none}
 	pop up
 -----------------*/
 .pop_up	{position:absolute; z-index:500; -moz-border-radius:4px; -webkit-border-radius: 4px; -khtml-border-radius: 4px; border-radius:4px; border:2px solid #591c06; display:none;}
+.pop_up_main	{z-index:500; -moz-border-radius:4px; -webkit-border-radius: 4px; -khtml-border-radius: 4px; border-radius:4px; border:2px solid #591c06; margin:0 auto;}
+
 	.pop_up_register	{width:600px;}
+
 		.pop_up_header	{background:url(/static/images/pop_up_header.jpg) 0 0 repeat-x; height:30px; padding:15px 0 0 26px; font-size:15px; color:#fff; position:relative;}
 			.close	{width:25px; height:25px; cursor:pointer; background:url(/static/images/close.gif) 0 0 no-repeat; top:10px; right:16px; position:absolute;}
 		.pop_up_cont	{background:#ae948e url(/static/images/pop_up_cont.jpg) 0 0 repeat-x; padding:10px;}
