--- a/insurance/templates/includes/popup_register.html
+++ b/insurance/templates/includes/popup_register.html
@@ -1,9 +1,92 @@
-<div class="pop_up pop_up_register" id="pop_up_1">
+    {% with reg_form as form %}
+ <div class="pop_up pop_up_register" id="pop_up_1">
     <div class="pop_up_header">
         <div class="close"></div>
         Регистрация нового пользователя
     </div>
-    {% with reg_form as form %}
-        {% include "registration/forms/registration_form.html" %}
-    {% endwith %}
+<div class="pop_up_cont">
+    <div class="pop_up_cont_in">
+		<div class="center_reg">
+        <form action="{% url registration_register %}" method="post">
+            {% csrf_token %}
+            <table cellspacing="0" cellpadding="0" class="table_user_form">
+                <tr>
+                    <th>Фамилия:</th>
+                    <th>*Адрес эл.почты:</th>
+                </tr>
+                <tr>
+                    <td>
+                        {{ form.last_name }}
+                        {{ form.last_name.errors }}
+                    </td>
+                    <td>
+                        {{ form.email }}
+                        {{ form.email.errors }}
+                    </td>
+                </tr>
+                <tr>
+                    <th>Имя:</th>
+                    <th>*Пароль:</th>
+                </tr>
+                <tr>
+                    <td>
+                        {{ form.first_name }}
+                        {{ form.first_name.errors }}
+                    </td>
+                    <td>
+                        {{ form.password1 }}
+                        {{ form.password1.errors }}
+                    </td>
+                </tr>
+                <tr>
+                    <th>Отчество:</th>
+                    <th>*Повторите пароль:</th>
+                </tr>
+                <tr>
+                    <td>
+                        {{ form.middle_name }}
+                        {{ form.middle_name.errors }}
+                    </td>
+                    <td>
+                        {{ form.password2 }}
+                        {{ form.password2.errors }}
+                    </td>
+                </tr>
+                <tr>
+                    <th>Телефон:</th>
+                    <th>*Введите текст с картинки:</th>
+                </tr>
+                <tr>
+                    <td><span class="phone_code">+7</span>
+                        {{ form.phone }}
+                        {{ form.phone.errors }}
+                    </td>
+                    <td>
+                        {{ form.captcha }}
+                        {{ form.captcha.errors }}
+                    </td>
+                </tr><tr><td>
+            <div class="register_checbox">
+                <p>Я согласен с правилами регистрации {{ form.tos }}</p>
+                {{ form.tos.errors }}
+            </div>
+            </td><td>
+            <div class="pop_up_button">
+                <input name="" type="submit" value="Зарегистрироваться"/>
+            </div>
+            </td>
+            </table>
+            {% if form.non_field_errors %}
+                <br/><br/><br/>
+                <div>
+                    <h2>Ошибки заполнения формы:</h2>
+                    {{ form.non_field_errors }}
+                </div>
+            {% endif %}
+        </form>
+    </div>
+    </div></div>
 </div>
+
+    {% endwith %}
+
