--- a/insurance/templates/registration/forms/login_form_full.html
+++ b/insurance/templates/registration/forms/login_form_full.html
@@ -1,6 +1,8 @@
-<div class="pop_up_cont">
-  <div class="pop_up_cont_in">
-	  <div class="center_login">
+  	<div class="pop_up_main pop_up_autorize">
+		<div class="pop_up_header">
+			Личный кабинет
+		</div>
+		<div class="pop_up_cont"><div class="pop_up_cont_in">
     <form action="{% url auth_login %}" method="post">{% csrf_token %}
     <div class="messages">{{ form.non_field_errors }}</div>
       <table cellspacing="0" cellpadding="0" class="table_user_form">
