--- a/insurance/templates/registration/forms/registration_form.html
+++ b/insurance/templates/registration/forms/registration_form.html
@@ -1,6 +1,8 @@
-<div class="pop_up_cont">
-    <div class="pop_up_cont_in">
-		<div class="center_reg">
+	<div class="pop_up_main pop_up_register">
+		<div class="pop_up_header">
+			Регистрация нового пользователя
+		</div>
+		<div class="pop_up_cont"><div class="pop_up_cont_in">
         <form action="{% url registration_register %}" method="post">
             {% csrf_token %}
             <table cellspacing="0" cellpadding="0" class="table_user_form">
@@ -78,6 +80,6 @@
                 </div>
             {% endif %}
         </form>
-    </div>
-    </div>
+		</div>
+	</div>
 </div>
