--- a/insurance/templates/registration/password_reset_form_content.html
+++ b/insurance/templates/registration/password_reset_form_content.html
@@ -1,16 +1,16 @@
-<div class="pop_up_cont">
-    <div class="pop_up_cont_in">
-		<div class="center_pass">
-        <div class="pop_up_header2">
-            Что же делать, если вы забыли пароль?
-        </div>
-        <p>В форму ниже введите свой электронный адрес, указанный при регистрации.
-            Через несколько минут на ваш адрес электронной почты придет письмо с паролем.</p>
-
-        <div class="form_email">
-            <p>*Адрес эл.почты:</p>
-
-            <div class="form_email_input">
+	<div class="pop_up_main pop_up_password_recovery">
+		<div class="pop_up_header">
+			Восстановление пароля
+		</div>
+		<div class="pop_up_cont"><div class="pop_up_cont_in">
+			<div class="pop_up_header2">
+				Что же  делать, если вы забыли пароль?
+			</div>
+			<p>В форму ниже введите свой электронный адрес, указанный при регестрации.
+	Через несколько минут на ваш Адрес эл,почты придет письмо с паролем,</p>
+			<div class="form_email">
+				<p>*Адрес эл.почты:</p>
+				<div class="form_email_input">
                 <form action="{% url auth_password_reset %}" method="post">
                     {% csrf_token %}
                     {{ form.email }}
@@ -19,9 +19,9 @@
                 {{ form.email.errors }}
             </div>
         </div>
-        <div class="pop_up_contacs">
-            Если при восстановлении пароля у вас возникли сложности, свяжитесь с нами:<br/>
-            +7 (495) 345 43 N\A , skype: polisbook.support.
-        </div>
-    </div></div>
-</div>
+       <div class="pop_up_contacs">
+				Если при восстонавлении пароля у вас возникли сложности, свяжитесь с нами:<br />
+	+7 (495) 345 43 N\A , skype: polisbook.support.
+			</div>
+		</div></div>
+	</div>
